salesforce/force-app/main/default/objects/Reply_Template__c/Reply_Template__c.object-meta.xml
<CustomObject>
    <label>Reply Template</label>
    <pluralLabel>Reply Templates</pluralLabel>
    <description>Pre-approved, versioned reply templates. Only Approved versions are sendable; an Approved record's body is immutable — editing requires a new version record.</description>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>