salesforce/force-app/main/default/objects/Reply_Template__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <description>Human approver. Part of the reconstructability contract for every outbound message.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Reply Templates</relationshipLabel>
    <relationshipName>Approved_Reply_Templates</relationshipName>
</CustomField>