salesforce/force-app/main/default/objects/Reply_Template__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <description>Template body. Immutable once the record is Approved (validation rule); edit by creating a new version.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>