salesforce/force-app/main/default/objects/Reply_Template__c/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <label>Intent</label>
    <description>The predicted intent this template is the approved response for.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Outreach_Intent</valueSetName>
    </valueSet>
</CustomField>